--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jun 09 02:30:21 KST 2025
-sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
+
+
+#Sun Jun 08 09:45:44 KST 2025
+sdk.dir=C\:\\Users\\worker\\AppData\\Local\\Android\\jdk-17
+
